# cloud-events-handler

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml  pythonpublish.yml
example-django-app/: tox.ini
example-django-app/project/settings/: app.py  base.py
example-django-app/requirements/: base.txt  test.txt
examples/example-django/: README.md  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
examples/example-django/project/: urls.py  wsgi.py
examples/example-django/project/settings/: base.py
examples/example-django/requirements/: base.txt  build.txt
examples/example-starlette/: README.md  handler.py
requirements/: base.txt  test.txt
src/cloud_events/: adapter.py  handler.py  interface.py  utils.py
tests/: adapter_test.py  asgi-app.py  events.py  events_test.py  handler_test.py
tests/django-app/: .ctags
tests/django-app/project/: urls.py
tests/django-app/requirements/: base.txt
tests/starlette-app/: __init__.py
